# cleanui

./: .gitignore  README.md  install.sh  pyproject.toml
.githooks/: pre-commit
scripts/: bump_version.py  install-git-hooks.sh
src/cleanui/: __init__.py  __main__.py  app.py
