[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cleanui"
version = "1.2.0"
description = "Linux 系统垃圾扫描与清理图形工具（Tkinter）"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "cleanui contributors" }]
keywords = ["linux", "cleanup", "disk", "gui", "tkinter"]
classifiers = [
  "Environment :: X11 Applications",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Desktop Environment",
  "Topic :: System :: Systems Administration",
]

[project.scripts]
cleanui = "cleanui.app:main"

[tool.setuptools.packages.find]
where = ["src"]
